Add first Project

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             </h2>
             <ul>
                <li>
-                  <a href="#">Project 1 </a>
+                  <a href="/webdev-attemp/">Simple layout</a>
                </li>
                <li>
                   <a href="#">Project 2 </a>
