Updated links to new projects

--- a/index.html
+++ b/index.html
@@ -24,25 +24,24 @@
                   <a href="/webdev-attemp/">Simple layout</a>
                </li>
                <li>
-                  <a href="#">Project 2 </a>
+                  <a href="/Lang-Toggle-Jquery/"
+                     >Language toggle and night mode
+                  </a>
                </li>
                <li>
-                  <a href="#">Project 3 </a>
+                  <a href="/unad-page/">UNAD Team Work </a>
                </li>
                <li>
-                  <a href="#">Project 4 </a>
+                  <a href="/flexbox-layout/">Flexbox Layout</a>
                </li>
                <li>
-                  <a href="#">Project 5 </a>
+                  <a href="/js-dom-manipulation/">JS DOM</a>
                </li>
                <li>
-                  <a href="#">Project 6 </a>
+                  <a href="/startup-landing-page/">Startup landing Page</a>
                </li>
                <li>
-                  <a href="#">Project 7 </a>
-               </li>
-               <li>
-                  <a href="#">Project 8 </a>
+                  <a href="/restaurant-layout/">Restaurant Simple Layout</a>
                </li>
             </ul>
          </div>
