added target to a elements

--- a/index.html
+++ b/index.html
@@ -21,27 +21,31 @@
             </h2>
             <ul>
                <li>
-                  <a href="/webdev-attemp/">Simple layout</a>
+                  <a href="/webdev-attemp/" target="_blank">Simple layout</a>
                </li>
                <li>
-                  <a href="/Lang-Toggle-Jquery/"
+                  <a href="/Lang-Toggle-Jquery/" target="_blank"
                      >Language toggle and night mode
                   </a>
                </li>
                <li>
-                  <a href="/unad-page/">UNAD Team Work </a>
+                  <a href="/unad-page/" target="_blank">UNAD Team Work </a>
                </li>
                <li>
-                  <a href="/flexbox-layout/">Flexbox Layout</a>
+                  <a href="/flexbox-layout/" target="_blank">Flexbox Layout</a>
                </li>
                <li>
-                  <a href="/js-dom-manipulation/">JS DOM</a>
+                  <a href="/js-dom-manipulation/" target="_blank">JS DOM</a>
                </li>
                <li>
-                  <a href="/startup-landing-page/">Startup landing Page</a>
+                  <a href="/startup-landing-page/" target="_blank"
+                     >Startup landing Page</a
+                  >
                </li>
                <li>
-                  <a href="/restaurant-layout/">Restaurant Simple Layout</a>
+                  <a href="/restaurant-layout/" target="_blank"
+                     >Restaurant Simple Layout</a
+                  >
                </li>
             </ul>
          </div>
