Big change adding a script that will consume the Github API.
Added a script that consumes the Github API  and making the script change the DOM

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
       <link rel="shortcut icon" href="./fox.jpg" type="image/x-icon" />
       <title>Nicolas Caballero | Github</title>
       <link rel="stylesheet" href="./css/styles.css" />
+      <script defer src="./script/app.js"></script>
    </head>
    <body>
       <div class="container">
@@ -19,35 +20,7 @@
             <h2>
                Projects
             </h2>
-            <ul>
-               <li>
-                  <a href="/webdev-attemp/" target="_blank">Simple layout</a>
-               </li>
-               <li>
-                  <a href="/Lang-Toggle-Jquery/" target="_blank"
-                     >Language toggle and night mode
-                  </a>
-               </li>
-               <li>
-                  <a href="/unad-page/" target="_blank">UNAD Team Work </a>
-               </li>
-               <li>
-                  <a href="/flexbox-layout/" target="_blank">Flexbox Layout</a>
-               </li>
-               <li>
-                  <a href="/js-dom-manipulation/" target="_blank">JS DOM</a>
-               </li>
-               <li>
-                  <a href="/startup-landing-page/" target="_blank"
-                     >Startup landing Page</a
-                  >
-               </li>
-               <li>
-                  <a href="/restaurant-layout/" target="_blank"
-                     >Restaurant Simple Layout</a
-                  >
-               </li>
-            </ul>
+            <ul id="projects_list"></ul>
          </div>
       </div>
    </body>
