--- a/index.html
+++ b/index.html
@@ -1,27 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
-   <head>
-      <meta charset="UTF-8" />
-      <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-      <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-      <link rel="shortcut icon" href="./fox.jpg" type="image/x-icon" />
-      <title>Nicolas Caballero | Github</title>
-      <link rel="stylesheet" href="./css/styles.css" />
-      <script defer src="./script/app.js"></script>
-   </head>
-   <body>
-      <div class="container">
-         <div class="title">
-            <h1>
-               Nicolas Caballero
-            </h1>
-         </div>
-         <div class="projects">
-            <h2>
-               Projects
-            </h2>
-            <ul id="projects_list"></ul>
-         </div>
-      </div>
-   </body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <title>Nicolas Caballero | Web Developer</title>
+  </head>
+  <body></body>
 </html>
