Finish portfolio site, added pagination feature, added images to card elements, minified css and js, added development code with comments plus the production code

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="author" content="Nicolas Caballero" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Nicolas Caballero | Web Developer</title>
-    <link rel="stylesheet" href="./css/style.css" />
+    <link rel="stylesheet" href="./css/style.min.css" />
     <link rel="shortcut icon" href="./fox.jpg" type="image/x-icon" />
   </head>
   <body class="on-load">
@@ -54,6 +54,11 @@
           Projects
         </h1>
         <div class="cards-container"></div>
+
+        <div class="pagination">
+          <a href="#" id="prev" class="prevBtn">Prev</a>
+          <a href="#" id="next" class="nextBtn">Next</a>
+        </div>
       </div>
     </main>
 
