--- a/index.html
+++ b/index.html
@@ -70,6 +70,6 @@
         &copy; <span id="year"></span> - All rights reserved
       </h2>
     </footer>
-    <script src="./script/app.js"></script>
+    <script src="./script/app.min.js"></script>
   </body>
 </html>
