--- a/index.html
+++ b/index.html
@@ -53,7 +53,10 @@
         <h1 class="title">
           Projects
         </h1>
-        <div class="cards-container"></div>
+        <div class="cards-container" id="cards-container"></div>
+        <div class="pagination">
+          <ul class="pagination__list"></ul>
+        </div>
       </div>
     </main>
 
